# Powershell

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.43265E9A3F335C17.idx
src/: filesystem.cpp  filesystem.hpp  input.cpp  input.hpp  main.cpp  system.cpp  system.hpp  text.cpp  text.hpp
